# midorisour-playground-fastapi

./: .gitignore  docker-compose.yaml  dockerfile  pyproject.toml
app/: main.py
app/api/: routers.py
app/api/endpoints/: working_with_frontend.py
app/core/: config.py
app/schemas/: working_with_frontend.py
