[project]
name = "with-code-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "whji",email = "whji@pinokiolab.com"}
]
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard] (>=0.120.0,<0.121.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
